--- a/ClimateDataset.razor
+++ b/ClimateDataset.razor
@@ -1,8 +1,9 @@
 ﻿@namespace Mas.Infrastructure.BlazorComponents
 
+@using Capnp.Rpc
+@using MudBlazor
 @using Climate = Mas.Schema.Climate
 @using Geo = Mas.Schema.Geo
-@using MudBlazor
 
 @implements IDisposable
 
@@ -14,11 +15,16 @@
                             TCapnpInterface="Climate.IDataset"/>
     </MudItem>
     <MudItem xs="2" Class=@(HideGeoPosPicker ? "d-none" : "")>
-        <MudText Typo="Typo.h5">Pick Geolocation - picked: @($"({Math.Round(LatLng.Item1, 2)}N/{Math.Round(LatLng.Item2, 2)}E)")</MudText>
+        <MudText Typo="Typo.h5">Pick Geolocation -
+            picked: @($"({Math.Round(LatLng.Item1, 2)}N/{Math.Round(LatLng.Item2, 2)}E)")</MudText>
     </MudItem>
     <MudItem xs="12" Class=@(HideGeoPosPicker ? "d-none" : "")>
         <GeoposPicker LatLng="@LatLng"
-                      LatLngChanged="@(async latLng => { LatLng = latLng; await SetClosestTimeSeries(); })"
+                      LatLngChanged="@(async latLng =>
+                                     {
+                                         LatLng = latLng;
+                                         await SetClosestTimeSeries();
+                                     })"
                       Width="100%" Height="400px"
                       CenterLatLng="@LatLng"/>
     </MudItem>
@@ -31,36 +37,36 @@
     //private bool datasetCapUpdated = false;
 
     private Climate.IDataset? datasetCap;
+
     [Parameter]
-    public Climate.IDataset? DatasetCap { 
+    public Climate.IDataset? DatasetCap
+    {
         get => datasetCap;
         set
         {
             if (datasetCap == value) return;
             Console.WriteLine("DatasetCap.Setter");
             datasetCap?.Dispose();
-            datasetCap = value; 
-            if (DatasetCapChanged.HasDelegate) _ = DatasetCapChanged.InvokeAsync(Capnp.Rpc.Proxy.Share(DatasetCap!));
-            _= SetClosestTimeSeries();
+            datasetCap = value;
+            if (DatasetCapChanged.HasDelegate) _ = DatasetCapChanged.InvokeAsync(Proxy.Share(DatasetCap!));
+            _ = SetClosestTimeSeries();
         }
     }
-    [Parameter]
-    public EventCallback<Climate.IDataset> DatasetCapChanged { get; set; }
+
+    [Parameter] public EventCallback<Climate.IDataset> DatasetCapChanged { get; set; }
 
     [CascadingParameter(Name = "TimeSeriesCapChanged")]
     public EventCallback<Climate.ITimeSeries> TimeSeriesCapChanged { get; set; }
 
-    [Parameter]
-    public bool HideSturdyRefConnector { get; set; } = false;
+    [Parameter] public bool HideSturdyRefConnector { get; set; }
 
     [CascadingParameter(Name = "HideGeoPosPicker")]
-    public bool HideGeoPosPicker { get; set; } = false;
+    public bool HideGeoPosPicker { get; set; }
 
-    [CascadingParameter(Name = "LatLng")]
-    public (double, double) LatLng { get; set; } = (52.52, 14.11);
+    [CascadingParameter(Name = "LatLng")] public (double, double) LatLng { get; set; } = (52.52, 14.11);
 
-    private Climate.ITimeSeries? TimeSeriesCap; 
-    
+    private Climate.ITimeSeries? TimeSeriesCap;
+
     private async Task CapabilityChanged(Climate.IDataset dataset)
     {
         if (dataset == null) return;
@@ -82,7 +88,7 @@
         if (TimeSeriesCap != ts) TimeSeriesCap?.Dispose();
         TimeSeriesCap = ts;
 
-        if (TimeSeriesCapChanged.HasDelegate) _ = TimeSeriesCapChanged.InvokeAsync(Capnp.Rpc.Proxy.Share(TimeSeriesCap));
+        if (TimeSeriesCapChanged.HasDelegate) _ = TimeSeriesCapChanged.InvokeAsync(Proxy.Share(TimeSeriesCap));
 
         StateHasChanged();
     }
@@ -92,4 +98,5 @@
         DatasetCap?.Dispose();
         //timeSeries?.Dispose();
     }
+
 }
