--- a/ClimateTimeSeries.razor
+++ b/ClimateTimeSeries.razor
@@ -1,9 +1,10 @@
 ﻿@namespace Mas.Infrastructure.BlazorComponents
-
-@using System.Text;
+@using System.Globalization
+@using System.Text
+@using Capnp.Rpc
+@using MudBlazor
 @using Climate = Mas.Schema.Climate
 @using Common = Mas.Schema.Common
-@using MudBlazor
 
 @inject IJSRuntime JsRuntime
 
@@ -12,18 +13,19 @@
 @*CapabilityChanged=@CapabilityChanged*@
 <MudGrid>
     <MudItem Class=@(HideSturdyRefConnector ? "d-none" : "") xs="12">
-        <ConnectToSturdyRef Label="Persistent capability to climate timeseries" 
+        <ConnectToSturdyRef Label="Persistent capability to climate timeseries"
                             @bind-Capability="@TimeSeriesCap"
                             TCapnpInterface="Climate.ITimeSeries"
                             ConnectOnInit="true"/>
     </MudItem>
     <MudItem xs="2" Class="d-flex justify-center">
-        <MudDatePicker MinDate="@_originalStart" MaxDate="@_originalEnd" FirstDayOfWeek="@DayOfWeek.Monday" Label="Start"
-            Editable="@true" Mask=@(new DateMask("0000-00-00")) DateFormat="yyyy-MM-dd" @bind-Date="@Start" />
+        <MudDatePicker MinDate="@_originalStart" MaxDate="@_originalEnd" FirstDayOfWeek="@DayOfWeek.Monday"
+                       Label="Start"
+                       Editable="@true" Mask=@(new DateMask("0000-00-00")) DateFormat="yyyy-MM-dd" @bind-Date="@Start"/>
     </MudItem>
     <MudItem xs="2" Class="d-flex justify-center">
         <MudDatePicker MinDate="@_originalStart" MaxDate="@_originalEnd" FirstDayOfWeek="@DayOfWeek.Monday" Label="End"
-            Editable="@true" Mask=@(new DateMask("0000-00-00")) DateFormat="yyyy-MM-dd" @bind-Date="@End" />
+                       Editable="@true" Mask=@(new DateMask("0000-00-00")) DateFormat="yyyy-MM-dd" @bind-Date="@End"/>
     </MudItem>
     <MudItem xs="4" Class="d-flex flex-row py-2 px-1">
         <!--@bind-SelectedValues="@SelectedClimateElements"-->
@@ -33,7 +35,7 @@
                     Variant="Variant.Filled"
                     T="Climate.Element">
             @foreach (var (e, i) in (_availableClimateElements ?? new List<Climate.Element>()).OrderBy(e =>
-                          e.ToString()).Select((e, i) => (e, i)))
+                              e.ToString()).Select((e, i) => (e, i)))
             {
                 var en = e.ToString();
                 <MudChip T="Climate.Element"
@@ -48,52 +50,59 @@
         </MudChipSet>
     </MudItem>
     <MudItem xs="4" Class="d-flex align-stretch justify-end gap-4">
-        <MudSwitch @bind-Value="AutoLoad" Label="Auto load" Color="Color.Success" />
+        <MudSwitch @bind-Value="AutoLoad" Label="Auto load" Color="Color.Success"/>
         <MudButton Variant="@Variant.Filled" Color="@Color.Primary" OnClick="@LoadTimeSeriesData">Load data</MudButton>
-        <MudButton Disabled="@(!headings.Any())" Variant="Variant.Filled" Color="@Color.Primary" OnClick="@SaveTimeSeries">
+        <MudButton Disabled="@(!headings.Any())" Variant="Variant.Filled" Color="@Color.Primary"
+                   OnClick="@SaveTimeSeries">
             Save data
         </MudButton>
     </MudItem>
     <MudItem xs="12">
         <MudExpansionPanels MultiExpansion="@true">
             @code {
-                private Dictionary<string, bool> panelOpened = new() { { "table", false }, { "text", false } };
-                
+                private readonly Dictionary<string, bool> panelOpened = new() { { "table", false }, { "text", false } };
+
                 [CascadingParameter(Name = "ChartPanelOpened")]
                 public bool ChartPanelOpened { get; set; } = true;
+
             }
+
             <MudExpansionPanel @bind-IsExpanded="@ChartPanelOpened" Text="Chart">
                 @code {
-                    private List<Highchart.AxisConfig> yAxisConfigs = new()
-                {
-                new Highchart.AxisConfig { Id = "def", Title = "Wind [m/s], Globrad [MJ/m2], Relhumid [%]" },
-                new Highchart.AxisConfig { Id = "temps", Title = "Temp [°C]" },
-                new Highchart.AxisConfig { Id = "precip", Title = "Precipitation [mm]", Opposite = true },
-                };
 
-                    private Dictionary<string, Highchart.CurveConfig> curveName2Config = new()
-                {
-                { "tmin", new Highchart.CurveConfig { DisplayAxisId = "temps" } },
-                { "tavg", new Highchart.CurveConfig { DisplayAxisId = "temps", IsVisible = true } },
-                { "tmax", new Highchart.CurveConfig { DisplayAxisId = "temps" } },
-                { "precip", new Highchart.CurveConfig { DisplayAxisId = "precip", IsVisible = true } },
-                { "globrad", new Highchart.CurveConfig { DisplayAxisId = "def" } },
-                { "wind", new Highchart.CurveConfig { DisplayAxisId = "def" } },
-                { "relhumid", new Highchart.CurveConfig { DisplayAxisId = "def" } }
-                };
+                    private readonly List<Highchart.AxisConfig> yAxisConfigs = new()
+                    {
+                        new Highchart.AxisConfig { Id = "def", Title = "Wind [m/s], Globrad [MJ/m2], Relhumid [%]" },
+                        new Highchart.AxisConfig { Id = "temps", Title = "Temp [°C]" },
+                        new Highchart.AxisConfig { Id = "precip", Title = "Precipitation [mm]", Opposite = true }
+                    };
+
+                    private readonly Dictionary<string, Highchart.CurveConfig> curveName2Config = new()
+                    {
+                        { "tmin", new Highchart.CurveConfig { DisplayAxisId = "temps" } },
+                        { "tavg", new Highchart.CurveConfig { DisplayAxisId = "temps", IsVisible = true } },
+                        { "tmax", new Highchart.CurveConfig { DisplayAxisId = "temps" } },
+                        { "precip", new Highchart.CurveConfig { DisplayAxisId = "precip", IsVisible = true } },
+                        { "globrad", new Highchart.CurveConfig { DisplayAxisId = "def" } },
+                        { "wind", new Highchart.CurveConfig { DisplayAxisId = "def" } },
+                        { "relhumid", new Highchart.CurveConfig { DisplayAxisId = "def" } }
+                    };
+
                 }
+
                 <Highchart Title="Climate Curves" XAxisTitle="Date" YAxisConfigs="@yAxisConfigs"
-                    CurveName2Config="@curveName2Config" Data="@_name2Data" Dates="@_dates" DataChanged="@_dataChanged"
-                    ChartRerendered="@(() => _dataChanged = false)"></Highchart>
+                           CurveName2Config="@curveName2Config" Data="@_name2Data" Dates="@_dates"
+                           DataChanged="@_dataChanged"
+                           ChartRerendered="@(() => _dataChanged = false)"></Highchart>
             </MudExpansionPanel>
             <MudExpansionPanel @bind-IsExpanded=@panelOpened["table"] Text="Table">
                 <MudTable T="@Element" Items="@data" Hover="@true" Dense="@true" Filter="@(new
-                    Func<Element,bool>(DataFilterFunc))">
+                                                                                             Func<Element, bool>(DataFilterFunc))">
                     <ToolBarContent>
                         <MudText Typo="Typo.h6">Timeseries Data</MudText>
-                        <MudSpacer />
+                        <MudSpacer/>
                         <MudTextField @bind-Value="searchString" Placeholder="Search" Adornment="Adornment.Start"
-                            AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0">
+                                      AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0">
                         </MudTextField>
                     </ToolBarContent>
                     <HeaderContent>
@@ -117,19 +126,23 @@
                         {
                             var k = i;
                             <MudTd DataLabel=@val>
-                                <MudTextField T=@float @bind-Value=context.Data[k] Required />
+                                <MudTextField T=@float @bind-Value=context.Data[k] Required/>
                             </MudTd>
                         }
                     </RowEditingTemplate>
                     <PagerContent>
-                        <MudTablePager />
+                        <MudTablePager/>
                     </PagerContent>
                 </MudTable>
             </MudExpansionPanel>
-            <MudExpansionPanel Text="Text" IsExpanded=@panelOpened["text"] ExpandedChanged=@(b => {
-                panelOpened["text"] = b; CreateCsvString(); })>
-                <MudTextField T="string" ReadOnly="@true" FullWidth="@true" Variant="@Variant.Outlined" Text="@_csvString"
-                    Lines="30" />
+            <MudExpansionPanel Text="Text" IsExpanded=@panelOpened["text"] ExpandedChanged=@(b =>
+            {
+                panelOpened["text"] = b;
+                CreateCsvString();
+            })>
+                <MudTextField T="string" ReadOnly="@true" FullWidth="@true" Variant="@Variant.Outlined"
+                              Text="@_csvString"
+                              Lines="30"/>
             </MudExpansionPanel>
         </MudExpansionPanels>
     </MudItem>
@@ -138,61 +151,72 @@
 @code {
 
 
-    [Parameter]
-    public bool AutoLoad { get; set; } = false;
+    [Parameter] public bool AutoLoad { get; set; }
 
     private Climate.ITimeSeries? _originalTimeSeriesCap;
 
-    private bool _settingSubTimeSeries = false;
+    private bool _settingSubTimeSeries;
 
     private Climate.ITimeSeries? _timeSeriesCap;
+
     [Parameter]
-    public Climate.ITimeSeries? TimeSeriesCap { 
+    public Climate.ITimeSeries? TimeSeriesCap
+    {
         get => _timeSeriesCap;
         set
         {
             if (_timeSeriesCap == value) return;
-            if(value is null or Capnp.Rpc.Proxy {IsDisposed: true }) return;
+            if (value is null or Proxy { IsDisposed: true }) return;
             Console.WriteLine("TimeSeriesCap.Setter");
             _timeSeriesCap?.Dispose(); //free old cap
-            _timeSeriesCap = value;    //assign new cap
+            _timeSeriesCap = value; //assign new cap
             //if not setting sub time-series, save unrestricted cap and before that free old unrestricted cap
             if (!_settingSubTimeSeries)
             {
                 _originalTimeSeriesCap?.Dispose();
-                _originalTimeSeriesCap = Capnp.Rpc.Proxy.Share(_timeSeriesCap!); //save unrestricted cap
-            } 
+                _originalTimeSeriesCap = Proxy.Share(_timeSeriesCap!); //save unrestricted cap
+            }
+
             // notify listeners
-            if (TimeSeriesCapChanged.HasDelegate) _ = TimeSeriesCapChanged.InvokeAsync(Capnp.Rpc.Proxy.Share(_timeSeriesCap!));
+            if (TimeSeriesCapChanged.HasDelegate) _ = TimeSeriesCapChanged.InvokeAsync(Proxy.Share(_timeSeriesCap!));
             // do whatever needs to be done after an update
             _ = TimeSeriesUpdated(_settingSubTimeSeries);
             // turn of subseries mode
             _settingSubTimeSeries = false;
-        } 
+        }
     }
 
     [CascadingParameter(Name = "TimeSeriesCapChanged")]
     public EventCallback<Climate.ITimeSeries> TimeSeriesCapChanged { get; set; }
 
-    [Parameter]
-    public bool HideSturdyRefConnector { get; set; } = false;
+    [Parameter] public bool HideSturdyRefConnector { get; set; }
 
     private DateTime? _start;
     private DateTime? _originalStart;
+
     [Parameter]
     public DateTime? Start
     {
         get => _start;
-        set { _start = value; _ = updateSubTimeSeries(); }
+        set
+        {
+            _start = value;
+            _ = updateSubTimeSeries();
+        }
     }
 
     private DateTime? _end;
     private DateTime? _originalEnd;
+
     [Parameter]
     public DateTime? End
     {
         get => _end;
-        set { _end = value; _ = updateSubTimeSeries(); }
+        set
+        {
+            _end = value;
+            _ = updateSubTimeSeries();
+        }
     }
 
     private struct Element
@@ -200,6 +224,7 @@
         public DateTime Date;
         public List<float> Data;
     }
+
     private string _csvString = "";
 
     [Parameter]
@@ -213,16 +238,21 @@
     public IReadOnlyCollection<Climate.Element> SelectedClimateElements
     {
         get => _selectedClimateElements ?? (_availableClimateElements ?? new List<Climate.Element>()).ToList();
-        set { _selectedClimateElements = value; _ = updateSubTimeSeries(); }
+        set
+        {
+            _selectedClimateElements = value;
+            _ = updateSubTimeSeries();
+        }
     }
 
-    private IEnumerable<string> headings { get => SelectedClimateElements.Select(e => e.ToString()); }
+    private IEnumerable<string> headings => SelectedClimateElements.Select(e => e.ToString());
+
     private List<Element> data = [];
     private string? searchString;
 
-    private Dictionary<string, IEnumerable<float>> _name2Data = new();
+    private readonly Dictionary<string, IEnumerable<float>> _name2Data = new();
     private IEnumerable<DateTime> _dates = new List<DateTime>();
-    private bool _dataChanged = false;
+    private bool _dataChanged;
 
     private async Task updateSubTimeSeries()
     {
@@ -237,8 +267,9 @@
                 DateTime2CommonDate(_end.GetValueOrDefault())
             );
         }
+
         if (_availableClimateElements != null
-        && SelectedClimateElements.Any() && !SelectedClimateElements.SequenceEqual(_availableClimateElements))
+            && SelectedClimateElements.Any() && !SelectedClimateElements.SequenceEqual(_availableClimateElements))
         {
             subTs = await subTs.Subheader(SelectedClimateElements.ToList());
         }
@@ -255,12 +286,14 @@
     }
 
     #region init
+
     protected override async Task OnInitializedAsync()
     {
         Console.WriteLine("OnInitialized ClimateTimeSeries");
     }
+
     #endregion
-    
+
     private async Task TimeSeriesUpdated(bool settingSubTimeseries = false)
     {
         Console.WriteLine("TimeSeriesUpdated");
@@ -271,7 +304,7 @@
         _start = settingSubTimeseries ? CommonDate2DateTime(s) : _originalStart;
         if (_originalEnd == null || !settingSubTimeseries) _originalEnd = CommonDate2DateTime(e);
         _end = settingSubTimeseries ? CommonDate2DateTime(e) : _originalEnd;
-        
+
         var h = await TimeSeriesCap.Header();
         _availableClimateElements ??= h;
 
@@ -319,7 +352,7 @@
         sb.Append(headings.Aggregate((a, e) => a + "," + e.ToString()));
         sb.Append("\n");
 
-        var ci = new System.Globalization.CultureInfo("en-US");
+        var ci = new CultureInfo("en-US");
         foreach (var el in data)
         {
             sb.Append(el.Date.ToString("yyyy-MM-dd"));
