--- a/GeoposPicker.razor
+++ b/GeoposPicker.razor
@@ -1,8 +1,6 @@
-﻿@namespace Mas.Infrastructure.BlazorComponents
-
-@using System.Diagnostics
-@using GoogleMapsComponents
+﻿@using GoogleMapsComponents
 @using GoogleMapsComponents.Maps
+@namespace Mas.Infrastructure.BlazorComponents
 
 @inject IJSRuntime JsRuntime
 
@@ -13,23 +11,17 @@
 </GoogleMap>
 
 @code {
-    [Parameter]
-    public string Width { get; set; } = "100%";
+    [Parameter] public string Width { get; set; } = "100%";
 
-    [Parameter]
-    public string Height { get; set; } = "100%";
+    [Parameter] public string Height { get; set; } = "100%";
 
-    [Parameter]
-    public (double, double) CenterLatLng { get; set; } = (0.0, 0.0);
+    [Parameter] public (double, double) CenterLatLng { get; set; } = (0.0, 0.0);
 
-    [Parameter]
-    public (double, double) LatLng { get; set; } = (0.0, 0.0);
+    [Parameter] public (double, double) LatLng { get; set; } = (0.0, 0.0);
 
-    [Parameter]
-    public EventCallback<(double, double)> LatLngChanged { get; set; }
+    [Parameter] public EventCallback<(double, double)> LatLngChanged { get; set; }
 
-    [Parameter]
-    public int Zoom { get; set; } = 6;
+    [Parameter] public int Zoom { get; set; } = 6;
 
 
     //[Inject]
@@ -41,7 +33,7 @@
 
     protected override void OnInitialized()
     {
-        _mapOptions = new MapOptions()
+        _mapOptions = new MapOptions
         {
             Zoom = Zoom,
             Center = new LatLngLiteral(CenterLatLng.Item1, CenterLatLng.Item2),
@@ -53,7 +45,7 @@
     {
         //Debug.WriteLine("Start OnAfterRenderAsync");
 
-        if(_map != null) await _map.InteropObject.AddListener<MouseEvent>("click", async e => await OnClick(e));
+        if (_map != null) await _map.InteropObject.AddListener<MouseEvent>("click", async e => await OnClick(e));
         await SetMarker(CenterLatLng.Item1, CenterLatLng.Item2);
 
         //await map1.InteropObject.AddListener("bounds_changed", OnBoundsChanged);
@@ -92,7 +84,6 @@
         //await map1.InteropObject.AddListener("tilt_changed", OnTiltChanged);
 
         //await map1.InteropObject.AddListener("zoom_changed", OnZoomChanged);
-
     }
 
     private async Task SetMarker(double lat, double lng)
@@ -103,10 +94,10 @@
         {
             //_currentMarker?.SetMap(null);
             //Console.WriteLine("GeoposPicker::SetMarker: _map?.InteropObject ...");
-            _currentMarker = await Marker.CreateAsync(JsRuntime, new MarkerOptions()
+            _currentMarker = await Marker.CreateAsync(JsRuntime, new MarkerOptions
             {
                 Position = new LatLngLiteral(lng, lat),
-                Map = _map?.InteropObject,
+                Map = _map?.InteropObject
                 //Label = $"Test",
                 //Animation = Animation.Bounce
                 //Icon = new Icon()
@@ -118,10 +109,11 @@
         }
     }
 
-    private async Task OnClick(GoogleMapsComponents.Maps.MouseEvent e)
+    private async Task OnClick(MouseEvent e)
     {
         LatLng = (e.LatLng.Lat, e.LatLng.Lng);
         if (LatLngChanged.HasDelegate) _ = LatLngChanged.InvokeAsync(LatLng);
         await SetMarker(LatLng.Item1, LatLng.Item2);
     }
+
 }
