--- a/LocallyStoredSturdyRefsDialog.razor
+++ b/LocallyStoredSturdyRefsDialog.razor
@@ -158,7 +158,7 @@
             if (IsConnected(data)) return;
 
             var t = InterfaceIdToType[data.InterfaceId];
-            var method = ConMan.GetType().GetMethod(nameof(ConnectionManager.Connect));
+            var method = ConMan.GetType().GetMethod(nameof(ConnectionManager.Connect), [typeof(string)]);
             var generic = method?.MakeGenericMethod(t);
             if (generic == null) return;
             var service = await generic.InvokeAsync(ConMan, data.SturdyRef);
